<resources>
    <string name="app_name">countryapp</string>
    <string name="country_list">Country List</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="network_unavailable">No Internet connection.</string>
    <string name="profile_name">Archi Dsouza</string>
    <string name="profile_titile">Multimedia Software Engineer at Motorola Mobility</string>
    <string name="cur_loc">Chicago, USA</string>
    <string name="email">archidsouza18@gmail.com</string>
    <string name="phonenumber">+1(312) 877-6454</string>
    <string name="profile">Profile</string>
    <string name="education_title">Education</string>
    <string name="experience_title">Experience</string>
    <string name="country_name">Country Name:</string>
    <string name="count_det_capital">Capital:</string>
    <string name="count_det_area">Area:</string>
    <string name="count_det_population">Population:</string>
    <string name="count_det_region">Region:</string>
    <string name="count_det_subregion">Subregion:</string>
</resources>
