<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prof_card_view"
    card_view:cardCornerRadius="4dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/profRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_cover" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_circle"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="161dp"
            android:layout_marginTop="98dp"
            android:layout_marginEnd="138dp"
            android:src="@mipmap/my_profile_pic" />

        <TextView
            android:id="@+id/prof_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_circle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/profile_name" />

        <TextView
            android:id="@+id/prof_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prof_name_txt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/profile_titile" />

        <TextView
            android:id="@+id/prof_cur_loc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prof_title_txt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/cur_loc" />

        <ImageView
            android:id="@+id/prof_email_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/prof_cur_loc_txt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/sym_action_email" />

        <TextView
            android:id="@+id/prof_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prof_cur_loc_txt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/prof_email_icon"
            android:text="@string/email" />

        <ImageView
            android:id="@+id/prof_phone_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/prof_email_icon"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/sym_action_call" />

        <TextView
            android:id="@+id/prof_phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prof_email_txt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/prof_phone_icon"
            android:text="@string/phonenumber" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>